# rhyme-checker

./: .gitignore  Cargo.toml  readme.md  release-web.sh
.claude/: settings.local.json
.claude/skills/rhyme-checker/: SKILL.md
data/cipai/: cipai.xml  readme.md
data/rhythme/: readme.md
src/: lib.rs  main.rs
src/core/: cipai.rs  meter.rs  mod.rs  rhyme.rs  rhythm.rs  tone.rs
src/parser/: cipai_parser.rs  mod.rs  rhyme_parser.rs  rhyme_parser_test.rs
